Final-Capstone/kubernetes/dev/services.yaml

apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: dev
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: dev
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-ui
  namespace: dev
spec:
  selector:
    app: frontend-ui
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: incidents-service-svc
  namespace: dev
spec:
  selector:
    app: incidents-service
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP
